refactor: Refatoração
