# rentalx/src/modules/cars/useCases/listSpecifications/ListSpecificationController.ts
@@ -1,11 +1,13 @@
 import { Request, Response } from 'express';
+import { container } from 'tsyringe';
 import { ListSpecificationsUseCase } from './ListSpecificationsUseCase';
 
 class ListSpecificationController {
-  constructor(private listSpecificationUseCase: ListSpecificationsUseCase) { }
-
   async handle(request: Request, response: Response): Promise<Response> {
-    const specifications = await this.listSpecificationUseCase.execute();
+    const listSpecificationUseCase = container.resolve(
+      ListSpecificationsUseCase,
+    );
+    const specifications = await listSpecificationUseCase.execute();
     return response.json(specifications);
   }
 }
